Fix for logo cropping on some resolutions, removed no more required hack for Safari Ipad animations for clicking

--- a/openacs-4/packages/cm-suggest/www/css/style.big.css
+++ b/openacs-4/packages/cm-suggest/www/css/style.big.css
@@ -1,4 +1,8 @@
-a:hover {
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+a:hover, a:active {
   background-color:transparent;
 }
 
@@ -12,8 +16,8 @@ body {
 }
 
 #title {
-    font-size:22px;
-    font-weight:bold;
+/*    font-size:22px;
+    font-weight:bold;*/
     margin-bottom:30px;
 }
 #cm_container {
