--- a/openacs-4/packages/cm-suggest/www/css/style.css
+++ b/openacs-4/packages/cm-suggest/www/css/style.css
@@ -1,5 +1,6 @@
-a:hover {
+a:hover, a:active {
   background-color:transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
@@ -12,8 +13,8 @@ body {
 }
 
 #title {
-    font-size:22px;
-    font-weight:bold;
+/*    font-size:22px;
+    font-weight:bold;*/
     margin-bottom:30px;
 }
 #cm_container {
